Update project entry point and remove requirements.txt
- Changed the entry point in pyproject.toml from 'data_pipeline.cli:main' to 'ai_explorer.app:main'
- Removed requirements.txt file (likely in favor of using pyproject.toml for dependency management)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,4 +26,4 @@ requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
-data-pipeline = "data_pipeline.cli:main"
+app = "ai_explorer.app:main"
